<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.crsuarez</groupId>
    <artifactId>java365</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.10.2</junit.version>
        <mockito.version>5.11.0</mockito.version>
        <jaxws.version>2.3.7</jaxws.version>
    </properties>

    <dependencies>
        <!-- JAX-WS RI runtime — provides javax.xml.ws.* removed from JDK 11+ -->
        <dependency>
            <groupId>com.sun.xml.ws</groupId>
            <artifactId>rt</artifactId>
            <version>${jaxws.version}</version>
        </dependency>

        <!-- JUnit 5 -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Mockito for mocking the SharePoint SOAP port in tests -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <!--
          Source files live directly under the project root in the "connector/"
          directory (package connector), so the source root is the project root.
        -->
        <sourceDirectory>${project.basedir}</sourceDirectory>
        <testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>

        <plugins>
            <!-- Compile with Java 17; exclude test and build-output directories
                 from the main compilation pass. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>17</release>
                    <excludes>
                        <exclude>src/**</exclude>
                        <exclude>target/**</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <!-- Create the wsimport output directory before wsimport runs. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>create-wsimport-dir</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <mkdir dir="${project.build.directory}/generated-sources/wsimport"/>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Generate SOAP stubs from the SharePoint WSDL using the bundled
                 wsimport tool. -Xnocompile skips wsimport's own javac pass so
                 Maven compiles everything in one consistent step. -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>wsimport-generate</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>wsimport</executable>
                            <arguments>
                                <argument>-Xnocompile</argument>
                                <argument>-keep</argument>
                                <argument>-s</argument>
                                <argument>${project.build.directory}/generated-sources/wsimport</argument>
                                <argument>-p</argument>
                                <argument>com.microsoft.schemas.sharepoint.soap</argument>
                                <argument>${project.basedir}/wsdl/wsdlfile.wsdl</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Register the wsimport output as an additional source directory. -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>add-wsimport-sources</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${project.build.directory}/generated-sources/wsimport</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Surefire 3.x required for JUnit 5 (Jupiter) discovery. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>
        </plugins>
    </build>
</project>
